--- a/back/pom.xml
+++ b/back/pom.xml
@@ -93,6 +93,11 @@
 		    <artifactId>jjwt</artifactId>
 		    <version>0.9.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-freemarker</artifactId>
+		</dependency>
 		
 	</dependencies>
 
