--- a/front/package.json
+++ b/front/package.json
@@ -23,7 +23,7 @@
     "boostrap": "^2.0.0",
     "chart.js": "^3.1.1",
     "primeng": "^16.1.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.1"
   },
