--- a/front/package.json
+++ b/front/package.json
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.7",
-    "@angular/cli": "~16.1.7",
+    "@angular/cli": "^16.2.0",
     "@angular/compiler-cli": "^16.1.8",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
